# kanjialive-mcp-server

./: .gitignore  LICENSE  README.md  TODO.md  kanjialive_mcp.py  pytest.ini  requirements.txt
data/: japanese-radicals.json
ka-mcp-hosted/: .env.example  README.md  package-lock.json  package.json  railway.toml  tsconfig.json
ka-mcp-hosted/src/: index.ts
ka-mcp-hosted/src/api/: client.ts  constants.ts  types.ts
ka-mcp-hosted/src/formatters/: markdown.ts  metadata.ts
ka-mcp-hosted/src/mcp/: server.ts
ka-mcp-hosted/src/mcp/resources/: radicals.ts
ka-mcp-hosted/src/mcp/tools/: advancedSearch.ts  basicSearch.ts  kanjiDetails.ts
ka-mcp-hosted/src/utils/: errors.ts  logger.ts  unicode.ts  validation.ts
ka-mcp-hosted/src/validators/: advancedSearch.ts  basicSearch.ts  kanjiDetail.ts  utils.ts
ka-mcp-local/: README.md  kanjialive_mcp.py  pyproject.toml
scripts/: convert_radicals_csv.py
tests/: conftest.py  test_api.py  test_formatters.py  test_radicals_resource.py  test_tools.py  test_validators.py
