[project]
name = "kanjialive-mcp-server"
version = "1.0.0"
description = "MCP server for the Kanji Alive API - search and retrieve information about Japanese kanji"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["kanjialive_mcp.py"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["../extras/tests"]
addopts = "--cov=kanjialive_mcp --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["kanjialive_mcp"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
